Fix alignment issue in the APIs table and delete modal

--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -86,10 +86,6 @@ thead tr th {
   background-color: transparent;
 }
 
-.action-column {
-  text-align: right;
-}
-
 .action-buttons-container {
   display: flex;
   justify-content: flex-end;
